--- a/index.html
+++ b/index.html
@@ -1,48 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Shazam-Clone</title>
+  </head>
+  <body>
     <header class="w-100">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container-fluid">
-              <a class="navbar-brand shazam-link-size" href="#"><img src="./img/logo-shazam.png" class="img-fluid shazam-logo-size" alt="Shazam Logo"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand shazam-link-size" href="#"
+            ><img
+              src="./img/logo-shazam.png"
+              class="img-fluid shazam-logo-size"
+              alt="Shazam Logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarColor01"
+            aria-controls="navbarColor01"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav pe-5 me-auto">
+              <li class="nav-item">
+                <a class="nav-link fw-bolder text-white" href="#" style="width: 8em;">MY LIBRARY</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bolder text-white" href="#">APP</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bolder text-white" href="#">CHARTS</a>
+              </li>
+            </ul>
+            <form class="justify-space-evenly">
+              <div
+                class="bg-white bg-opacity-25 rounded d-inline-block h-25 ms-2 me-2"
+              >
+                <input
+                  class="form-control me-sm-2 bg-transparent border-0 text-white"
+                  type="text"
+                  placeholder="Search for music"
+                  spellcheck="false"
+                  data-ms-editor="true"
+                />
+                <button class="btn my-2 my-sm-0" type="submit">
+                  <img
+                    src="./img/search-white-icon.png"
+                    alt="search"
+                    style="width: 1.5rem; height: 1.5rem"
+                  />
+                </button>
+              </div>
+              <button
+                type="button"
+                class="btn btn-primary btn-lg shazam-bg-color fw-bolder w-25 h-25 ms-2 me-2"
+              >
+                DOWNLOAD APP
               </button>
-              <div class="collapse navbar-collapse" id="navbarColor01">
-                <ul class="navbar-nav me-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">MY LIBRARY</a>
+              <button
+                type="button"
+                class="btn btn-light btn-lg w-25 h-25 shazam-text-color fw-bolder ms-2 me-2"
+              >
+                CONNECT
+                <img
+                  src="./img/apple-music-logo.png"
+                  class="img-fluid w-50"
+                  alt="Apple Music Logo"
+                />
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="main-bg">
+      <div class="container d-grid">
+        <div class="row">
+          <div class="col">
+            <img src="./img/phones.png" alt="Phones" class="h-50" />
+          </div>
+          <div class="col d-grid">
+            <h2 class="text-white">Identify songs playing around you</h2>
+            <p class="text-white">Shazam will name your song in seconds</p>
+            <a
+              href="#"
+              class="btn bg-white bg-opacity-25 rounded d-inline-block"
+              ><img src="./img/qr-code.png" alt="QR-Code" class="h-25 w-25" />
+              <p class="text-start text-white">
+                Use your phone's camera to scan and download the free Shazam app
+              </p>
+              <p class="text-start fw-bolder text-white">
+                Available on iOS, Android and more devices
+              </p></a
+            >
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer-bg text-white">
+      <nav class="container">
+        <div class="row pt-5">
+          <div class="col-6">
+            <ul class="list-unstyled">
+              <li>
+                <a href="#"
+                  ><img
+                    src="./img/logo-footer.png"
+                    alt="Shazam Logo footer"
+                    class="w-25"
+                /></a>
+              </li>
+              <li class=" mt-3 mb-5">
+                <button
+                  class="btn btn-lg footer-bg border-secondary text-white-50 dropdown-toggle"
+                  type="button"
+                  id="dropdownMenuButton1"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                English
+                </button>
+                <ul class="dropdown-menu footer-bg border-secondary" aria-labelledby="dropdownMenuButton1">
+                  <li>
+                    <a class="dropdown-item text-white-50" href="#">Select your language</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">APP</a>
+                  <li><a class="dropdown-item text-white-50" href="#">English</a></li>
+                  <li><a class="dropdown-item text-white-50" href="#">Italian</a></li>
+                  <li><a class="dropdown-item text-white-50" href="#">German</a></li>
+                  <li><a class="dropdown-item text-white-50" href="#">Spanish</a></li>
+                  <li><a class="dropdown-item text-white-50" href="#">French</a></li>
+                </ul>
+              </li>
+              <li class=" mt-5 mb-3">
+                <ul class="list-unstyled list-inline">
+                  <li class="list-inline-item">
+                    <a href="#"><img src="./img/Google_Play_Store_badge_EN.svg" alt="Google Play" style="max-width: 8rem;"/></a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">CHARTS</a>
+                  <li class="list-inline-item">
+                    <a href="#"><img src="./img/download-on-the-app-store-apple.png" alt="Apple AppStore" style="max-width: 8rem;"/></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="#"><img src="./img/jaxx-chrome-store.png" alt="Chrome Web Store" style="max-width: 8rem;"/></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="#"><img src="./img/galaxy-store-english.png" alt="Galaxy Store" style="max-width: 8rem;"/></a>
                   </li>
                 </ul>
-                <form class="d-flex">
-                  <input class="form-control me-sm-2" type="text" placeholder="Search" spellcheck="false" data-ms-editor="true">
-                  <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main>
-        <div class="container">
-
+              </li>
+            </ul>
+          </div>
+          <div class="col w-25">
+            <ul class="list-unstyled ms-5 me-3 ps-5">
+              <li class="text-white-50">Company</li>
+              <li class="mt-3 mb-3"><a href="#" class="text-decoration-none text-white">About Us</a></li>
+              <li class="mt-3 mb-3"><a href="#" class="text-decoration-none text-white">Careers</a></li>
+              <li class="mt-3 mb-3"><a href="#" class="text-decoration-none text-white">Help for Apple Devices</a></li>
+              <li class="mt-3 mb-3"><a href="#" class="text-decoration-none text-white">Help for Android Devices</a></li>
+              <li class="mt-3 mb-3"><a href="#" class="text-decoration-none text-white">ShazamKit for Developers</a></li>
+              <li class=" mt-3 mb-3"><a href="#" class="text-decoration-none text-white">Apple Music Offer</a></li>
+            </ul>
+          </div>
+          <div class="col-2">
+            <ul class="list-unstyled">
+              <li class="text-white-50">Legal</li>
+              <li class=" mt-3 mb-3"><a href="#" class="text-decoration-none text-white">Terms</a></li>
+              <li class=" mt-3 mb-3"><a href="#" class="text-decoration-none text-white">Privacy</a></li>
+              <li class=" mt-3 mb-3"><a href="#" class="text-decoration-none text-white">Manage Your Data</a></li>
+            </ul>
+          </div>
         </div>
-    </main>
+      </nav>
+      <nav class="pt-3 pb-5">
+        <ul class="list-unstyled">
+          <li class="text-white-50">Follow Us</li>
+          <li><ul class="list-unstyled list-inline">
+            <li class="list-inline-item"><a href="#"><img src="./img/facebook-f-brands-white.png" alt="Facebook" style="height: 2em;"></a></li>
+            <li class="list-inline-item"><a href="#"><img src="./img/twitter-brands-white.png" alt="Twitter" style="height: 2em;"></a></li>
+            <li class="list-inline-item"><a href="#"><img src="./img/instagram-brands-white.png" alt="Instagram" style="height: 2em;"></a></li>
+            <li class="list-inline-item"><a href="#"><img src="./img/snapchat-brands-white.png" alt="Snapchat" style="height: 2em;"></a></li>
+          </ul></li>
+          <li>© Copyright <span id="year"></span> Apple Inc. and its affiliates | <a href="#" class="text-decoration-none text-white"> Supplier Responsibility</a></li>
+        </ul>
+      </nav>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      let span = document.getElementById("year");
+      let year = new Date().getFullYear();
+      span.innerHTML = year;
+    </script>
+  </body>
 </html>
