2022-03-14 - Main and Footer sections updated

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <li class=" mt-5 mb-3">
                 <ul class="list-unstyled list-inline">
                   <li class="list-inline-item">
-                    <a href="#"><img src="./img/Google_Play_Store_badge_EN.svg" alt="Google Play" style="max-width: 8rem;"/></a>
+                    <a href="#"><img src="./img/google-play-store-badge-en.png" alt="Google Play" style="max-width: 8rem;"/></a>
                   </li>
                   <li class="list-inline-item">
                     <a href="#"><img src="./img/download-on-the-app-store-apple.png" alt="Apple AppStore" style="max-width: 8rem;"/></a>
